Fixed footer spacing, cleaned up code, added journals, and started to work on the tell us anything page.

--- a/ghi/src/components/components.css
+++ b/ghi/src/components/components.css
@@ -64,6 +64,7 @@ tr:nth-child(even) {
 
 body {
     background-color: rgba(245, 236, 187, 0.617);
+    padding-bottom: 5%;
 }
 
 .card {
